[gd_scene load_steps=20 format=3 uid="uid://c62elcy8ir21"]

[ext_resource type="Script" path="res://enemies/base_enemy.gd" id="1_ngmta"]
[ext_resource type="Texture2D" uid="uid://5fiseqmatvsl" path="res://prototype-sprites/bee-approach.png" id="2_hlknh"]
[ext_resource type="Texture2D" uid="uid://xtslgaeo3032" path="res://prototype-sprites/bee-walk.png" id="2_vrt3l"]
[ext_resource type="Material" path="res://resources/Clockup_material.tres" id="2_ysl8a"]
[ext_resource type="Texture2D" uid="uid://c4ko2cid3k5ba" path="res://prototype-sprites/bee-attack.png" id="3_ak4sa"]
[ext_resource type="Texture2D" uid="uid://bml5iugf48rlk" path="res://prototype-sprites/bee-fly.png" id="4_vcl83"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gl4hy"]
atlas = ExtResource("2_hlknh")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jb7o"]
atlas = ExtResource("2_hlknh")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ouhsk"]
atlas = ExtResource("3_ak4sa")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xyay"]
atlas = ExtResource("3_ak4sa")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgagj"]
atlas = ExtResource("4_vcl83")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ami2e"]
atlas = ExtResource("4_vcl83")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2gpt"]
atlas = ExtResource("4_vcl83")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0owd"]
atlas = ExtResource("2_vrt3l")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qp8mr"]
atlas = ExtResource("2_vrt3l")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_vkh8a"]
resource_local_to_scene = true
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl4hy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jb7o")
}],
"loop": true,
"name": &"approach",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouhsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xyay")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgagj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ami2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2gpt")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0owd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qp8mr")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_aghni"]
radius = 22.9972
height = 60.0

[sub_resource type="CircleShape2D" id="CircleShape2D_c8oyo"]
resource_local_to_scene = true
radius = 157.918

[sub_resource type="CircleShape2D" id="CircleShape2D_7w3qt"]
resource_local_to_scene = true
radius = 110.164

[node name="base_enemy" type="CharacterBody2D" groups=["Enemy"]]
script = ExtResource("1_ngmta")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = ExtResource("2_ysl8a")
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_vkh8a")
animation = &"idle"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 3)
rotation = 1.55509
shape = SubResource("CapsuleShape2D_aghni")

[node name="DetectionArea" type="Area2D" parent="."]
visible = false
position = Vector2(-111, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_c8oyo")

[node name="AttackArea" type="Area2D" parent="."]
visible = false
position = Vector2(-63, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_7w3qt")

[node name="RayCastTop" type="RayCast2D" parent="."]
target_position = Vector2(0, -28)

[node name="RayCastBottom" type="RayCast2D" parent="."]
target_position = Vector2(0, 28)

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
